<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FicherosAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

<!--     MANEJO EXTERNA -->
	<string name="txtMenExt">Manejo de la memoria externa</string>
	<string name="btnWriteMenExt">Write Mem Ext.</string>
	<string name="btnReadMenExt">Read Mem. Ext.</string>
    
<!-- 	MANEJO RECURSO -->
	<string name="txtRecurso">Manejo como recurso</string>
	<string name="btnRecurso">Read Recurso</string>
	
	
</resources>